--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -8,7 +8,7 @@
 <div class="container mt-5">
     <div class="card shadow-lg">
         <div class="card-header bg-primary text-white text-center">
-            <h3><i class="fa-solid fa-book-open"></i> Thêm Lớp Học</h3>
+            <h3> <i class="fas fa-plus-circle"></i>Thêm Lớp Học</h3>
         </div>
         <div class="card-body">
             @using (Html.BeginForm("Create", "LopHoc", FormMethod.Post, new { enctype = "multipart/form-data" }))
