--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -34,6 +34,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+    <!-- Toastr CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+
+    <!-- Toastr JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
     <!-- Libraries Stylesheet -->
     <link href="~/Asset/lib/animate/animate.min.css" rel="stylesheet">
     <link href="~/Asset/lib/owlcarousel//Assets/owl.carousel.min.css" rel="stylesheet">
@@ -62,21 +68,39 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-lg-5 p-lg-0">
-                <div class="nav-item dropdown">
-                    <a href="@Url.Action("Index", "Courses")" class="nav-item nav-link">Khóa Học</a>
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <a href="@Url.Action("Index", "Courses")" class="nav-item nav-link">Khóa Học</a>
+            </div>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
+                <div class="dropdown-menu fade-down m-0">
+                    <a href="@Url.Action("LichHoc", "QuanLyHocTap")" class="dropdown-item">Lịch Học</a>
+                    <a href="@Url.Action("LopHocDaDangKy", "QuanLyHocTap")" class="dropdown-item">Danh Sách Lớp Đăng Ký</a>
                 </div>
             </div>
-            <div class="navbar-nav ms-lg-5 p-lg-0">
+            @if (User.Identity.IsAuthenticated)
+            {
+
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="@Url.Action("Index", "")" class="dropdown-item">Lịch Học</a>
-                        <a href="@Url.Action("Index", "")" class="dropdown-item">Danh Sách Lớp Đăng Ký</a>
+                    <a href="#" class="nav-link dropdown-toggle" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa fa-user me-2"></i> @User.Identity.Name.ToString()
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="userDropdown">
+                        <a class="dropdown-item" href="@Url.Action("ThongTinCaNhan","Account")">Thông tin cá nhân</a>
+
+                        <form action="@Url.Action("Logout", "Account")" method="post">
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="dropdown-item">Đăng Xuất</button>
+                        </form>
 
                     </div>
                 </div>
-            </div>
+
+            }
+            else
+            {
+                <a href="@Url.Action("Login", "Account")" class="nav-item nav-link">Đăng Nhập</a>
+            }
             <nav class="navbar navbar-light bg-light ms-auto me-lg-5" style="width: 300px;">
                 <div class="container-fluid">
                     <form class="d-flex w-100">
@@ -85,33 +109,6 @@
                     </form>
                 </div>
             </nav>
-
-            <div class="navbar-nav ms-lg-5 p-lg-0">
-                @if (User.Identity.IsAuthenticated)
-                {
-
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa fa-user me-2"></i> @User.Identity.Name
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="@Url.Action("ThongTinCaNhan","Account")">Thông tin cá nhân</a>
-
-                            <form action="@Url.Action("Logout", "Account")" method="post">
-                                @Html.AntiForgeryToken()
-                                <button type="submit" class="dropdown-item">Đăng Xuất</button>
-                            </form>
-
-                        </div>
-                    </div>
-
-                }
-                else
-                {
-                    <a href="@Url.Action("Login", "Account")" class="nav-item nav-link">Đăng Nhập</a>
-                }
-            </div>
-
         </div>
     </nav>
 
@@ -208,7 +205,7 @@
     <script src="~/Asset/lib/easing/easing.min.js"></script>
     <script src="~/Asset/lib/waypoints/waypoints.min.js"></script>
     <script src="~/Asset/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
     <!-- Template Javascript -->
