--- a/QuanLyThongTinDaoTao/Areas/Asset/css/style.css
+++ b/QuanLyThongTinDaoTao/Areas/Asset/css/style.css
@@ -80,10 +80,10 @@
 }
 
 .content {
-    margin-left: 250px;
+    /*margin-left: 250px;*/
     min-height: 100vh;
     background: #FFFFFF;
-    transition: 0.5s;
+    transition: 0.5s; 
 }
 
 @media (min-width: 992px) {
